# dracoon-python-api

./: .env.example  .gitignore  LICENSE  README.md  Set_autoallow_per_group_blank.py  async_requests_example.py  authentication_example.py  bulk_room_config_example.py  file_upload_example.py  folder_room_converter_example.py  import_csv_example.py  import_csv_example_lts.py  permissions_csv_example.py  personal_rooms_example.py  pyproject.toml  requirements.txt  room_events_csv_example.py  run_tests.py  setup.py  test_core.py  test_crypto.py  update_room_groups.py  update_subroom_quota.py  user_csv_example.py
dracoon/: __init__.py  core.py  core_models.py  crypto.py  crypto_models.py  dc.py  downloads.py  eventlog.py  eventlog_responses.py  groups.py  groups_models.py  groups_responses.py  logger.py  nodes.py  nodes_models.py  nodes_responses.py  public.py  public_responses.py  reports.py  reports_models.py  reports_responses.py  settings.py  settings_models.py  settings_responses.py  shares.py  shares_models.py  shares_responses.py  uploads.py  uploads_models.py  user.py  user_models.py  user_responses.py  users.py  users_models.py
examples/: 1601_date_fix.py  HomeRooms.py  active_users_example.py  async_create_new_keypair.py  async_create_user.py  async_download.py  async_encrypted_upload.py  async_login_auth_code_flow.py  async_login_password_flow.py  async_new_report.py  async_personal_rooms.py  async_requests_example.py  async_user_management.py  auto_download_example.py  bulk_file_meta_update_example.py  bulk_group_permission_update_example.py  folder_to_room.py  (+41 more)
(+138 files in other folders)
