[tool.poetry]
name = "dracoon"
version = "1.12.0"
description = "DRACOON API wrapper in Python"
authors = ["Octavio Simone <o.simone@dracoon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
pydantic = "^2.0.0"
cryptography = "^41.0.0"
tenacity = "^8.2.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"