[tool.poetry]
name = "dracoon"
version = "1.12.2"
description = "DRACOON API wrapper in Python"
authors = ["Octavio Simone <o.simone@dracoon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.1"
pydantic = "^2.4.2"
cryptography = "^41.0.4"
tenacity = "^8.2.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"