[tool.poetry]
name = "dracoon"
version = "1.13.0"
description = "DRACOON API wrapper in Python"
authors = ["Octavio Simone <o.simone@dracoon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.6.3"
cryptography = "^42.0.5"
tenacity = "^8.2.3"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
respx = "^0.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"